--- a/css/utsss.css
+++ b/css/utsss.css
@@ -2,6 +2,18 @@
 body {
 	background: #BDCEE1
 }
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 1s ease forwards;
+}
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 nav {
   position: fixed;
   top: 35px;
